# kordex-std

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  vix.json
cmake/: KordexStdConfig.cmake.in  KordexStdOptions.cmake
examples/: CMakeLists.txt  console.cpp  env.cpp  fs.cpp  path.cpp  process.cpp  registry.cpp  timer.cpp
include/kordex/std/: Console.hpp  Crypto.hpp  Env.hpp  Error.hpp  Fs.hpp  Http.hpp  ModuleFactory.hpp  Path.hpp  Process.hpp  Result.hpp  Softadastra.hpp  Std.hpp  StdConfig.hpp  StdOptions.hpp  StdRegistry.hpp  Timer.hpp  Version.hpp
src/: Console.cpp  Crypto.cpp  Env.cpp  Error.cpp  Fs.cpp  Http.cpp  ModuleFactory.cpp  Path.cpp  Process.cpp  Softadastra.cpp  Std.cpp  StdConfig.cpp  StdOptions.cpp  StdRegistry.cpp  Timer.cpp  Version.cpp
tests/: CMakeLists.txt  test_console.cpp  test_crypto.cpp  test_env.cpp  test_error.cpp  test_fs.cpp  test_http.cpp  test_module_factory.cpp  test_path.cpp  test_process.cpp  test_std_config.cpp  test_std_options.cpp  test_std_registry.cpp  test_timer.cpp  test_version.cpp
